@@ -1,3 +1,4 @@
+	* improve performance of freeing disk cache for a specific torrent
 	* improve connect-boost feature, to make new torrents quickly connect peers
 
 1.1.9 release
